--- a/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/css/estilo.css
+++ b/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/css/estilo.css
@@ -1,28 +1,45 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 @font-face {
-    font-family: 'Idroid';
-    src: url('fontes/idroid.otf') format('opentype');
+    font-family: 'Android';
+    src: url('../font/idroid.otf') format('opentype');
+}
+
+:root{
+    --verdeBranco: #c5ebd5;
+    --verdeClaro: #37C878;
+    --verde: #3ddc84;
+    --verdeEscuro: #278d55;
+    --verdeFloresta: #07552b;
+
+    --fontePadrao: Arial, Helvetica, Verdana, sans-serif;
+    --fonteTitPrincipal: 'Bebas Neue', cursive;
+    --fonteAndroid: 'Android', cursive;
 }
 
 *{
     padding: 0px;
     margin: 0px;
+    font-family: var(--fontePadrao);
 }
 
 body{
-    background-color: #C5EBD6;
+    background-color: var(--verdeBranco);
 }
 
 header{
     text-align: center;
     background-image: linear-gradient(to bottom, #37C878, #278d55 );
-    padding: 10px;
     color: white;
+    padding-top: 10px;
 }
 
 header > h1{
+    color: white;
     font-size: 2em;
-    margin: 10px 0px 20px 0px;
+    margin: 10px 0px 0px;
+    font: 3em var(--fonteTitPrincipal);
 }
 
 header > p{
@@ -55,28 +72,57 @@ main{
 }
 
 h1{
-    font-family: 'Idroid', sans-serif;
+    font-family: var(--fonteAndroid);
+    color: var(--verdeFloresta);
     padding: 5px;
     margin: 10px;
 }
 
 h1#tit_principal{
     padding-top: 10px;
+    font-size: 2.2em;
     margin: 0px 10px;
 }
 
 h1.tit_destaque{
-    background-image: linear-gradient(to right, #37c8789f, #fff);
+    background-image: linear-gradient(to right, #37c8789f, #f9fcfa);
 }
 
 p.p_materia{
     padding: 5px;
     margin: 0px 5px;
+    text-align: justify;
+}
+
+img.img_conteudo{
+    margin: auto;
+}
+
+strong, a{
+    font-weight: 700;
+    color: var(--verdeFloresta);
+}
+
+a#a_footer{
+    color: white;
+}
+
+footer{
+    background-color: var(--verdeEscuro);
+    height: 30px;
+    margin-top: 10px;
+    padding-top: 10px;
+    text-align: center;
+    color: white;
 }
 
 
-@media screen and (max-width:850px) {
+@media screen and (max-width:820px) {
     main{
+        width: 100%;
+    }
+
+    img{
         width: 100%;
     }
 }
