--- a/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/css/estilo.css
+++ b/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/css/estilo.css
@@ -24,6 +24,10 @@
     font-family: var(--fontePadrao);
 }
 
+p{
+    text-indent: 2em;
+}
+
 body{
     background-color: var(--verdeBranco);
 }
@@ -66,7 +70,8 @@ a.nav_link:hover{
 }
 
 main{
-    width: 800px;
+    min-width: 320px;
+    max-width: 800px;
     margin: 0px auto;
     background-color: white;
 }
@@ -95,12 +100,37 @@ p.p_materia{
 }
 
 img.img_conteudo{
-    margin: auto;
+    width: 95%;
 }
 
 strong, a{
     font-weight: 700;
     color: var(--verdeFloresta);
+}
+
+section#video{
+    background-color: var(--verdeEscuro);
+    padding: 10px;
+}
+
+div.align-center{
+    width: 100%;
+    text-align: center;
+    margin: auto;
+}
+
+aside#info_extra{
+    background-color: var(--verdeBranco);
+    margin: 10px 20px;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.301);
+    border-radius: 10px 10px 0px 0px;
+}
+
+h1#tit_extra{
+    background-color: var(--verde);
+    color: rgb(255, 255, 255);
+    margin: 0px;
+    border-radius: 10px 10px 0px 0px;
 }
 
 a#a_footer{
@@ -118,11 +148,16 @@ footer{
 
 
 @media screen and (max-width:820px) {
-    main{
+    img{
         width: 100%;
     }
 
-    img{
+    div#vide{
+        padding: 0px;
+    }
+
+    iframe{
         width: 100%;
+        height: 300px;
     }
 }
