--- a/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/css/estilo.css
+++ b/Html5 Css3/Html5 Css3 (2020)/Prática/Módulo-02-DeixandoAsCoisasMaisBonitas/17-PrimeiroMiniProjeto/css/estilo.css
@@ -62,11 +62,12 @@ a.nav_link{
     text-decoration: none;
     padding: 10px;
     margin: 0px 5px;
+    transition: 0.5s;
 }
 
 a.nav_link:hover{
     background-color: rgba(241, 241, 241, 0.507);
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 main{
@@ -74,6 +75,7 @@ main{
     max-width: 800px;
     margin: 0px auto;
     background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.397);
 }
 
 h1{
@@ -140,7 +142,6 @@ a#a_footer{
 footer{
     background-color: var(--verdeEscuro);
     height: 30px;
-    margin-top: 10px;
     padding-top: 10px;
     text-align: center;
     color: white;
