recipes start development

--- a/Html5 Css3/Alura/ArquiteturaCss/assets/css/banner/banner_enumaration.css
+++ b/Html5 Css3/Alura/ArquiteturaCss/assets/css/banner/banner_enumaration.css
@@ -1,3 +1,10 @@
+.banner_menu{
+  width: 100%;
+  justify-content: center !important; 
+  position: absolute;
+  bottom: 10px;
+}
+
 .banner_number{
   width: 10px;
   height: 10px;
