--- a/Html5 Css3/Alura/ArquiteturaCss/assets/css/banner/banner.css
+++ b/Html5 Css3/Alura/ArquiteturaCss/assets/css/banner/banner.css
@@ -1,15 +1,9 @@
 .banner{
-  background-image: url('../../img/banner.jpg');
+
+  background-image: url("../../img/banner.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 400px;
-  margin: auto;
-}
-
-.banner_content{
-  max-width: 700px;
-  height: 100%;
-  margin: auto;
-  text-align: center;
+  height: calc(100vh - 72px);
   position: relative;
+
 }
