--- a/Html5 Css3/Alura/ArquiteturaCss/assets/css/recipes/recipes_list.css
+++ b/Html5 Css3/Alura/ArquiteturaCss/assets/css/recipes/recipes_list.css
@@ -1,6 +1,11 @@
 .recipes_list{
   display: flex;
   flex-flow: row wrap;
-  
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
   padding: 20px;
+  margin: auto;
+  max-width: clamp(300px, 80vw, 1000px);
 }
