--- a/Html5 Css3/Alura/ArquiteturaCss/assets/css/recipes/recipe.css
+++ b/Html5 Css3/Alura/ArquiteturaCss/assets/css/recipes/recipe.css
@@ -4,8 +4,8 @@
 
 .recipe_container{
 
-  max-width: 300px;
-  height: 400px;
+  width: 250px;
+  height: 300px;
   background-color: rgb(199, 199, 199);
   margin: 0 10px 10px;
 
