--- a/TypeScript/Alura/React+Ts/timer/src/components/taskComponent/task.module.scss
+++ b/TypeScript/Alura/React+Ts/timer/src/components/taskComponent/task.module.scss
@@ -1,5 +1,5 @@
 .container{
-  background-color: rgba(127, 108, 213, 0.5);
+  background-color: #7f6cd580;
   border-radius: 10px;
   padding: 10px;
   margin-bottom: 15px;
