--- a/TypeScript/Alura/React+Ts/timer/src/components/taskList/taskList.module.scss
+++ b/TypeScript/Alura/React+Ts/timer/src/components/taskList/taskList.module.scss
@@ -1,3 +1,15 @@
+.container{
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  max-height: 100%;
+  overflow-y: scroll;
+
+  @media screen and (max-width:600px) {
+    overflow-y: auto;
+  }
+
+}
+
 .title{
   
   color: black;
@@ -12,7 +24,7 @@
 }
 
 .warning{
-  background-color: rgba(127, 108, 213, 0.3);
+  background-color: #7f6cd54d;
   padding: 10px;
   border-radius: 10px;
 }
