tasks creation and style modify

--- a/TypeScript/Alura/React+Ts/timer/src/components/form/form.module.scss
+++ b/TypeScript/Alura/React+Ts/timer/src/components/form/form.module.scss
@@ -11,7 +11,7 @@
 
 .formSection{
 
-  margin-bottom: 20px;
+  margin: 0 50px 20px 0;
 
   > * {
     display: block;
@@ -35,4 +35,8 @@
   
   }
 
+}
+
+.button{
+  text-align: center;
 }
