--- a/TypeScript/Alura/React+Ts/timer/src/components/taskList/taskList.module.scss
+++ b/TypeScript/Alura/React+Ts/timer/src/components/taskList/taskList.module.scss
@@ -2,11 +2,6 @@
   grid-column: 2 / 3;
   grid-row: 1 / 3;
   max-height: 100%;
-  overflow-y: scroll;
-
-  @media screen and (max-width:600px) {
-    overflow-y: auto;
-  }
 
 }
 
@@ -20,7 +15,13 @@
 
 .list{
   margin-top: 15px;
+  max-height: calc(100% - 30px);
   list-style: none;
+  overflow-y: scroll;
+
+  @media screen and (max-width:600px) {
+    overflow-y: auto;
+  }
 }
 
 .warning{
