--- a/TypeScript/Alura/React+Ts/timer/src/pages/app.module.scss
+++ b/TypeScript/Alura/React+Ts/timer/src/pages/app.module.scss
@@ -1,6 +1,6 @@
 .appContainer{
   width: 80vw;
-  height: 70vh;
+  max-height: 70vh;
 
   position: relative;
   transform: translate(-50%, -50%);
@@ -13,7 +13,7 @@
 
   display: grid;
   grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 1.5fr;
 
   @media screen and (max-width:600px) {
     display: block;
