feat(selecionamento de tasks): ao clicar em uma task da lista ela é selecionada e adicionada a variavel 'selectedTask' no component 'App'

--- a/TypeScript/Alura/React+Ts/timer/src/components/taskComponent/task.module.scss
+++ b/TypeScript/Alura/React+Ts/timer/src/components/taskComponent/task.module.scss
@@ -1,5 +1,4 @@
 .container{
-  background-color: #7f6cd580;
   border-radius: 10px;
   padding: 10px;
   margin-bottom: 15px;
@@ -8,6 +7,14 @@
     cursor: pointer;
   }
 
+}
+
+.unselected{
+  background-color: #7f6cd580;
+}
+
+.selected{
+  background-color: #3f3270a8;
 }
 
 .title{
