FEAT(regressiva, task) - STYLE(timer, task) - FIX ( select task ) FEAT: - Ao clicar no botão 'começar' com uma task selecionada, o contador começa a contagem regressiva - quando a task está completa, fica indiponivel ao clique STYLE: - alteração no estilo do relógio e em seu formato html - quando a task esta completa, seu estilo muda FIX: - agora, ao selecionar outra task enquanto há outra ativa, a task anterior é pausada

--- a/TypeScript/Alura/React+Ts/timer/src/components/taskComponent/task.module.scss
+++ b/TypeScript/Alura/React+Ts/timer/src/components/taskComponent/task.module.scss
@@ -17,6 +17,12 @@
   background-color: #3f3270a8;
 }
 
+.completed{
+  background-color: #4b9151a8;
+  text-decoration: line-through;
+  cursor: no-drop;
+}
+
 .title{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.5em;
