FEAT(filters) : criação dos filtros - Botões para a filtragem de pesquisa disponiveis - Ao clicar, um novo valor é salvo em currentFilter

--- a/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/searchBar/searchBar.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/searchBar/searchBar.module.scss
@@ -11,10 +11,10 @@
 
   margin: 20px;
   padding: 10px;
-  background-color: $bgColorLight;
+  background-color: $bgColorSemiLight;
 
   > *{
-    background-color: $bgColorLight;
+    background-color: $bgColorSemiLight;
   }
 }
 
