--- a/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
@@ -1,9 +1,14 @@
 /* Background: */
 $bgColor: #303030;
-$bgColorLight: #505050;
+$bgColorSemiLight: #505050;
+$bgColorLight: #808080;
 
 /* TextColor */
 $lightText: #757575;
 
 /* Fonts: */
 $fontNoto: "Noto Serif";
+
+/* Extra Colors: */
+$red: #E90313;
+$white: #eee;
