STYLE ( filters ): alteração do estilo ao selecionar - Ao selecionar agora, o botão de filtro fica vermelho

--- a/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
@@ -5,6 +5,7 @@ $bgColorLight: #808080;
 
 /* TextColor */
 $lightText: #757575;
+$darkText: #101010;
 
 /* Fonts: */
 $fontNoto: "Noto Serif";
@@ -12,3 +13,4 @@ $fontNoto: "Noto Serif";
 /* Extra Colors: */
 $red: #E90313;
 $white: #eee;
+$green: #008000
