--- a/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/filtersBar/components/filters/filters.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/filtersBar/components/filters/filters.module.scss
@@ -1,21 +1,15 @@
 @import "assets/style/_variables.scss";
 
-.container{
-  margin: 20px;
-}
-
 .list{
   list-style: none;
   display: flex;
   flex-flow: row wrap;
-  justify-content: start;
-  margin: auto;
 }
 
 .filter{
   background-color: $bgColorLight;
   margin: 0 10px 10px 0;
-  width: 200px;
+  width: 150px;
   border-radius: 5px;
 }
 
@@ -24,15 +18,15 @@
 }
 
 .checkBox:checked + .name{
-  background-color: $red;
+  background-color: $darkRed;
 }
 
 .name{
   text-transform: capitalize;
   color: $darkText;
   display: inline-block;
-  padding: 10px;
   width: 100%;
+  height: 100%;
   text-align: center;
   user-select: none;
 }
