STYLE(products && productsList): - estilo de cada produto concluido - estilo da lista de produtos concluido

--- a/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/searchBar/searchBar.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/searchBar/searchBar.module.scss
@@ -2,7 +2,7 @@
 
 .container{
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
 
   justify-content: space-between;
   justify-items: center;
@@ -21,7 +21,7 @@
 .input{
   border: none;
   height: 40px;
-  width: calc(100vw - 95px);
+  width: calc(100vw - 110px);
 }
 
 .input, .input::placeholder{
