FEAT(filters and order): Filtragem e ordenação funcionando) - Comparação do id dos produtos da lista e do filtro ativo - Classe ToOrderProduct para ordenar o array de produtos

--- a/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/products/product/product.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/products/product/product.module.scss
@@ -2,14 +2,14 @@
 
 .container{
   box-sizing: border-box;
-  width: 300px;
+  max-width: clamp(250px, 300px, 500px);
   padding: 10px;
   margin-right: 5px;
   margin-bottom: 10px;
 }
 
 .image{
-  width: 280px;
+  width: 100%;
   height: auto;
   border-radius: 10px;
 }
