--- a/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/products/products_list.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/cardapio/components/products/products_list.module.scss
@@ -2,5 +2,6 @@
   margin: 20px;
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
+  justify-content: center;
+  justify-items: center;
 }
