FIX ( productsList ) : refatorado local e método de exibição - Recebe o array de itens ao invés de importar - Metodo de filtragem deve ser executado na classe superior - productList apenas exibe a lista, não à filtra e busca mais

--- a/TypeScript/Alura/React+Ts/static-files/src/components/products/products_list.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/components/products/products_list.module.scss
@@ -1,7 +1,14 @@
+@import "assets/style/_variables.scss";
+
 .container{
   margin: 20px;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   justify-items: center;
+}
+
+.warningMessage{
+  color: $darkRed;
+  font-size: 1.2rem;
 }
