FEAT ( router ) : inicio criado e trocas por router - Pagina início criada - Router entre inicio e loja desenvolvido

--- a/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
@@ -8,7 +8,8 @@ $lightText: #757575;
 $darkText: #101010;
 
 /* Fonts: */
-$fontNoto: "Noto Serif";
+$defaultFont: "Noto Serif";
+$titlesFont: "roboto", sans-serif;
 
 /* Extra Colors: */
 $red: #E90313;
