--- a/TypeScript/Alura/React+Ts/static-files/src/components/products/products_list.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/components/products/products_list.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  justify-items: center;
+  justify-items: flex-start;
 }
 
 .warningMessage{
