AHAHASHDHASKDJHD EU NÃO AGUENTO MAIS SAPORRA

--- a/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
@@ -15,4 +15,6 @@ $titlesFont: "roboto", sans-serif;
 $red: #E90313;
 $darkRed: #cc0000;
 $white: #eee;
-$green: #008000
+$green: #008000;
+$darkGray: #474747;
+$lightGray: #505050;
