--- a/TypeScript/Alura/React+Ts/static-files/src/components/header/header.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/components/header/header.module.scss
@@ -1,38 +1,13 @@
 @import 'assets/style/_variables.scss';
 
 .container{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: start;
-  justify-items: flex-start;
-  align-items: center;
-  align-content: flex-start;
-
-  padding: 20px 20px 10px;
-
+  margin: 20px;
+  display: grid;
+  grid-template-columns: minmax(100px, 300px) auto;
+  gap: 20px;
 }
 
 .logo{
-  height: 50px;
   margin-right: 10px;
-}
-
-.navMenu{
-  display: flex;
-
-}
-
-.menuLink{
-  padding: 10px 15px;
-  margin: 5px 5px 0 20px;
-  text-decoration: none;
-  color: $white;
-  font-size: 1.1rem;
-  border-radius: 2px;
-  transition: 0.5s;
-  
-  &:hover{
-    background-color: $darkRed;
-  }
-
+  width: 100%;
 }
