--- a/TypeScript/Alura/React+Ts/static-files/src/components/products/products_list.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/components/products/products_list.module.scss
@@ -1,11 +1,22 @@
 @import "assets/style/_variables.scss";
 
 .container{
-  margin: 20px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  justify-items: flex-start;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr;
+
+  @media screen and (min-width: 600px) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media screen and (min-width: 900px) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  @media screen and (min-width: 1500px) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
 }
 
 .warningMessage{
