--- a/TypeScript/Alura/React+Ts/static-files/src/pages/home/featuredoffers/featuredOffers.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/home/featuredoffers/featuredOffers.module.scss
@@ -1,15 +1,17 @@
 @import 'assets/style/_variables.scss';
 
 .title{
-  margin: 20px;
   font: 500 1.5em $titlesFont;
   color: $white;
+  margin-bottom: 5px;
 
   .icon{
     color: $darkRed;
     height: 22px;
     position: relative;
-    top: 5px;
+    top: 4px;
+    left: -4px;
+    z-index: -1;
   }
 
 }
