--- a/TypeScript/Alura/React+Ts/static-files/src/pages/shop/filtersBar/filtersBar.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/shop/filtersBar/filtersBar.module.scss
@@ -1,10 +1,14 @@
 @import "assets/style/_variables.scss";
 
 .container{
-  margin: 20px;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  justify-content: center;
+
+  @media screen and (min-width: 765px) {
+    justify-content: space-between;
+  }
+
 }
 
 .filterElement{
