--- a/TypeScript/Alura/React+Ts/static-files/src/pages/shop/searchBar/searchBar.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/shop/searchBar/searchBar.module.scss
@@ -9,7 +9,7 @@
   align-items: center;
   align-content: center;
 
-  margin: 20px;
+  margin-bottom: 10px;
   padding: 10px;
   background-color: $bgColorSemiLight;
 
