--- a/TypeScript/Alura/React+Ts/static-files/src/pages/shop/filtersBar/filters/filters.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/shop/filtersBar/filters/filters.module.scss
@@ -31,9 +31,8 @@
 .name{
   text-transform: capitalize;
   color: $darkText;
+  width: 130px;
   display: inline-block;
-  width: 100%;
-  height: 100%;
   text-align: center;
   user-select: none;
 }
