--- a/TypeScript/Alura/React+Ts/static-files/src/components/header/header.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/components/header/header.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   max-width: 1500px;
   padding: 20px;
+  z-index: 10;
 
   @media screen and (min-width: 1500px) {
     margin: 20px auto;
