--- a/TypeScript/Alura/React+Ts/static-files/src/pages/home/slidesContainer/slides.module.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/pages/home/slidesContainer/slides.module.scss
@@ -1,9 +1,76 @@
+@import 'assets/style/_variables.scss';
+
+.slideShow{
+  position: relative;
+  user-select: none;
+  overflow-x: hidden;
+  
+  > *{
+    z-index: -1;
+  }
+
+}
+
 .slidesContainer{
+  position: relative;
   display: flex;
-  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: calc(100vh - 150px);
 
   .slide{
-    max-height: 300px;
+    position: relative;
+    width: 0%;
+    height: 100%;
+    overflow-y: hidden;
+
+    .image{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+  }
+
+  .slide.active{
+    width: 100%;
+    left: 0;
+    transition: left 1s;
+  }
+
+  .slideAfter{
+    left: 100%;
+    transition: left 1s;
+  }
+
+  .slideBefore{
+    left: -100%;
+    transition: left 1s;
+  }
+
+}
+
+.arrowsContainer{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  user-select: none;
+  z-index: 0;
+
+  > *{
+    z-index: 1;
+  }
+  
+  .leftArrow, .rightArrow{
+    cursor: pointer;
+    color: $darkRed;
+    margin: 0 20px;
+    font-size: 3rem;
   }
 
 }
