FEAT ( footer & notFound ): criação da pagina de notFound e do footer - NotFound: ao viajar para uma pagina não existente, uma tela pré-definida é exibida - Footer: mensagem exibida no fim de cada pagina

--- a/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
+++ b/TypeScript/Alura/React+Ts/static-files/src/assets/style/_variables.scss
@@ -1,4 +1,5 @@
 /* Background: */
+$bgColorDark: #202020;
 $bgColor: #303030;
 $bgColorSemiLight: #505050;
 $bgColorLight: #808080;
@@ -15,6 +16,7 @@ $titlesFont: "roboto", sans-serif;
 $red: #E90313;
 $darkRed: #cc0000;
 $white: #eee;
+$darkWhite: #ccc;
 $green: #008000;
 $darkGray: #474747;
 $lightGray: #505050;
